--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -3,6 +3,7 @@ body {
   font-family: "Nunito Sans", sans-serif;
   font-weight: 400;
   font-size: 1em;
+  background-color: #F1F6FA !important;
 }
 
 .wrapper {
